--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="picture/main/1.png" alt="Kitchen Remodeling" onclick="location.href='./kitchen.html'">
             <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'">
         </div>
-        <footer class="d-flex justify-content-center">
+        <footer class="d-flex justify-content-center" id="bfooter">
               <p>@Kitchen Update 2019</p>
               <i class="fab fa-facebook-square" onclick="location.href='https://www.facebook.com'"></i>
               <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
