--- a/pages/img1.html
+++ b/pages/img1.html
@@ -12,7 +12,7 @@
     <link href="../vendor/foundation.css" rel="stylesheet" type="text/css" />
     <link href="../vendor/twentytwenty.css" rel="stylesheet" type="text/css" />
 
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
     <title>Cabinet Painting</title>
 </head>
 
