--- a/cabinet.html
+++ b/cabinet.html
@@ -23,39 +23,37 @@
         </section>
 
         <section id="msg">
-          <h1>Cabinet painting now. </h1> 
-
+          <h1>Cabinet painting now</h1> 
+          <button type="button" class="btn btn-danger">Request Info</button>
         </section>
 
         <section>
-            <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./picture/cabinet/carousel/2.jpg" class="d-block mx-auto w-50" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./picture/cabinet/carousel/2.jpg" class="d-block mx-auto w-50" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./picture/cabinet/carousel/2.jpg" class="d-block mx-auto w-50" alt="...">
+              </div>
+            </div>
 
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="..." alt="First slide">
-                        <img class="d-block w-100" src="..." alt="First slide">
-                    </div>
-
-                </div>
-
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div> -->
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </section>
-        
+        <br><br>    
         <section id="cabinet_pics">
-            <div class="container-fluid">
+          <div class="container-fluid">
                 <br>
                 <div class="row">
                     <img class="col-4" src="./picture/cabinet/1b.jpg" onclick="location.href='./pages/img1.html'">
@@ -82,8 +80,8 @@
                 <img class="col-4" src="./picture/cabinet/10b.jpg" onclick="location.href='./pages/img10.html'">
                 <img class="col-4" src="./picture/cabinet/11b.jpg" onclick="location.href='./pages/img11.html'">
                 <img class="col-4" src="./picture/cabinet/12b.jpg" onclick="location.href='./pages/img12.html'">
-                </div>
             </div>
+          </div>
         </section>
 
         <section >
@@ -165,10 +163,6 @@
                       
             </div>                      
         </section>
-
-
-
-
         <br>
         <footer class="d-flex justify-content-center" id="cabinet_footer">
             <p>@Kitchen Update 2019</p>
@@ -177,7 +171,44 @@
             <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
             <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
         </footer>
+    </div>  
+  <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#exampleModalCenter">
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+
+      <div class="modal-content">
+        <div class="modal-body">
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+              </ul>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
     </div>
+  </div>
+
+
+
+
+
+
+
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
