--- a/kitchen.html
+++ b/kitchen.html
@@ -20,10 +20,26 @@
     </div>
 
     <div class="selections">
-        <img src="./picture/kitchen/1.png" alt="CONSULT">
-        <img src="./picture/kitchen/2.png" alt="DESIGN">
-        <img src="./picture/kitchen/3.png" alt="DEVELOP">
+        <img src="./picture/kitchen/1.png" 
+            alt="CONSULT" 
+            onmouseover="this.src='./picture/kitchen/1a.png'"
+            onmouseout="this.src='./picture/kitchen/1.png'"
+        >
+
+        <img src="./picture/kitchen/2.png" 
+            alt="DESIGN" 
+
+            onmouseover="this.src='./picture/kitchen/1a.png'"
+            onmouseout="this.src='./picture/kitchen/2.png'"
+        >
+
+        <img src="./picture/kitchen/3.png" 
+            alt="DEVELOP" 
+            onmouseover="this.src='./picture/kitchen/1a.png'"
+            onmouseout="this.src='./picture/kitchen/2.png'"
+        >
     </div>
+
     <br>
     <div class="brands"><H2>OUR CABINET BRANDS</H2></div>
 
