--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
           </footer>
     </div>
+    <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#exampleModalCenter">
 </body>
 </html>
 
