--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <div id="wrapper">
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-            <h2>301-909-3404</h2>
+            <h2>
+                <i class="fas fa-phone"></i>
+                <b >301-909-3404</b>
+            </h2>
         </div>
         <div id="main" class="d-flex justify-content-around align-items-center">
             <img src="picture/main/3.png" alt="Cabinet Painting" onclick="location.href='./cabinet.html'">
