--- a/pages/img6.html
+++ b/pages/img6.html
@@ -22,7 +22,10 @@
         <section class="top">
             <div id="menu">
                 <img src="/picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-                <h2>301-909-3404</h2>
+                <h2>
+                    <i class="fas fa-phone"></i>
+                    <b >301-909-3404</b>
+                </h2>
             </div>
         </section>
 
