--- a/cabinet.html
+++ b/cabinet.html
@@ -34,13 +34,22 @@
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./picture/cabinet/carousel/2.jpg" class="d-block mx-auto w-50" alt="...">
+                <img src="./picture/cabinet/carousel/step1.png" class="d-block mx-auto w-50" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./picture/cabinet/carousel/2.jpg" class="d-block mx-auto w-50" alt="...">
+                <img src="./picture/cabinet/carousel/step2.png" class="d-block mx-auto w-50" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./picture/cabinet/carousel/2.jpg" class="d-block mx-auto w-50" alt="...">
+                <img src="./picture/cabinet/carousel/step3.png" class="d-block mx-auto w-50" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./picture/cabinet/carousel/step4.png" class="d-block mx-auto w-50" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./picture/cabinet/carousel/step5.png" class="d-block mx-auto w-50" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./picture/cabinet/carousel/step6.png" class="d-block mx-auto w-50" alt="...">
               </div>
             </div>
 
