--- a/cabinet.html
+++ b/cabinet.html
@@ -25,9 +25,11 @@
             </div>
         </section>
 
-        <section id="msg">
-          <h1>Cabinet painting now</h1> 
-          <button type="button" class="btn btn-danger">Request Info</button>
+        <section id="kitchen_mdg">
+          <h1><span>Refresh</span> your <span>Kitchen</span> with new <span>Color</span></h1> 
+          <br><br><br><br>
+          <h2 style="text-align:center; font-size: 45px;">Ask us about new service: <span style="color: #EB5905; "><b>CABINETS REFACING</b></span></h2>
+          <br><br><br><br>
         </section>
 
         <section>
