--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
     <div id="wrapper">
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-            <h2>
-                <i class="fas fa-phone"></i>
-                <b >301-909-3404</b>
-            </h2>
+            <div>
+                <h2>
+                    <i class="fas fa-phone"></i>
+                    <b >301-909-3404</b>
+                </h2>
+                <button type="button" data-toggle="dropdown" class="btn btn-outline-light">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/">Home</a>
+                        <a class="dropdown-item" href="#">About Us</a>
+                        <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                </div>
+            </div>
+
         </div>
         <div id="main" class="d-flex justify-content-around align-items-center">
             <img src="picture/main/3.png" alt="Cabinet Painting" onclick="location.href='./cabinet.html'">
