--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div id="wrapper">
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-            <div>
+            <div class="r_menu">
                 <h2>
                     <i class="fas fa-phone"></i>
                     <b >301-909-3404</b>
                 </h2>
-                <button type="button" data-toggle="dropdown" class="btn btn-outline-light">
+                <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle ">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="dropdown-menu">
@@ -29,7 +29,6 @@
                         <a class="dropdown-item" href="./gallery.html">Gallery</a>
                 </div>
             </div>
-
         </div>
         <div id="main" class="d-flex justify-content-around align-items-center">
             <img src="picture/main/3.png" alt="Cabinet Painting" onclick="location.href='./cabinet.html'">
