--- a/cabinet.html
+++ b/cabinet.html
@@ -16,13 +16,25 @@
 <body>
     <div id="wrapper">
         <section class="top">
+
             <div id="menu">
                 <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-                <h2>
-                  <i class="fas fa-phone"></i>
-                  <b >301-909-3404</b>
-                </h2>
+                <div class="r_menu">
+                    <h2>
+                        <i class="fas fa-phone"></i>
+                        <b >301-909-3404</b>
+                    </h2>
+                    <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle ">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/">Home</a>
+                        <a class="dropdown-item" href="#">About Us</a>
+                        <a class="dropdown-item" href="./gallery.html">Gallery</a>
+                    </div>
+                </div>
             </div>
+
         </section>
 
         <section id="kitchen_mdg">
