--- a/custom.html
+++ b/custom.html
@@ -15,11 +15,21 @@
 <body>
 
     <div id="menu">
-        <img src="/picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-        <h2>
-            <i class="fas fa-phone"></i>
-            <b >301-909-3404</b>
-        </h2>
+        <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
+        <div class="r_menu">
+            <h2>
+                <i class="fas fa-phone"></i>
+                <b >301-909-3404</b>
+            </h2>
+            <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle ">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="/">Home</a>
+                <a class="dropdown-item" href="#">About Us</a>
+                <a class="dropdown-item" href="./gallery.html">Gallery</a>
+            </div>
+        </div>
     </div>
 
     <div id="kitchen_mdg">
@@ -27,3 +37,8 @@
     </div>
 
 </body>
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
