--- a/gallery.html
+++ b/gallery.html
@@ -9,140 +9,180 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+
+
     <title>Gallery</title>
 </head>
 <body>
-    <div id="wrapper">
-        <div id="menu">
-            <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
-            <div>
-                <h2>
-                    <i class="fas fa-phone"></i>
-                    <b >301-909-3404</b>
-                </h2>
-                <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" href="#">About Us</a>
-                    <a class="dropdown-item" href="./gallery.html">Gallery</a>
-                </div>
+  <div id="wrapper">
+    <div id="menu">
+      <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
+      <div class="r_menu">
+        <h2>
+          <i class="fas fa-phone"></i>
+          <b >301-909-3404</b>
+        </h2>
+        <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="/">Home</a>
+          <a class="dropdown-item" href="#">About Us</a>
+          <a class="dropdown-item" href="./gallery.html">Gallery</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="conteiner d-flex justify-content-center" >
+      <div id="carouselExampleControls" class="carousel slide col-10 " data-ride="carousel" >
+        <div class="carousel-inner">
+
+
+          <div class="carousel-item active">
+            <img class="d-block col-9" src="./picture/gallery/1.jpg">
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/2.jpg">
+          </div>
+
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/3.jpg">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/4.jpg">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/5.jpg">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/6.jpg">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/7.jpg">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/8.jpg">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block col-9" src="./picture/gallery/9.jpg">
+          </div>
+
+          <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/10.jpg">
             </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/11.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/12.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/13.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/14.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/15.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/16.jpg">
+          </div>
+        
+          <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/11.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/12.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/13.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/14.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/15.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/16.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/17.jpg">
+          </div>
+
+          <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/18.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/19.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/20.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/21.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/22.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/23.jpg">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block col-9" src="./picture/gallery/24.jpg">
+            </div>
+  
+            <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/25.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/26.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/27.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/28.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/29.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/30.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/31.jpg">
+            </div>
+          
+            <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/32.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/33.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/34.jpg">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block col-9" src="./picture/gallery/35.jpg">
+              </div>
         </div>
 
-
-<!-- Container for the image gallery -->
-<div class="container">
-
-  <!-- Full-width images with number text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 6</div>
-      <img src="picture/cabinet/1b.jpg" style="width:100%">
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>    
   </div>
-
-  <div class="mySlides">
-    <div class="numbertext">2 / 6</div>
-      <img src="picture/cabinet/2b.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">3 / 6</div>
-      <img src="picture/cabinet/3b.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">4 / 6</div>
-      <img src="picture/cabinet/4b.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">5 / 6</div>
-      <img src="picture/cabinet/5b.jpg" style="width:100%">
-  </div>
-
-  <div class="mySlides">
-    <div class="numbertext">6 / 6</div>
-      <img src="picture/cabinet/6b.jpg" style="width:100%">
-  </div>
-
-  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-  <!-- Image text -->
-  <div class="caption-container">
-    <p id="caption"></p>
-  </div>
-
-  <!-- Thumbnail images -->
-  <div class="row">
-    <div class="column">
-      <img class="demo cursor" src="picture/cabinet/1b.jpg" style="width:100%" onclick="currentSlide(1)">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="picture/cabinet/2b.jpg" style="width:100%" onclick="currentSlide(2)">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="picture/cabinet/3b.jpg" style="width:100%" onclick="currentSlide(3)">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="picture/cabinet/4b.jpg" style="width:100%" onclick="currentSlide(4)">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="picture/cabinet/5b.jpg" style="width:100%" onclick="currentSlide(5)">
-    </div>
-    <div class="column">
-      <img class="demo cursor" src="picture/cabinet/6b.jpg" style="width:100%" onclick="currentSlide(6)">
-    </div>
-  </div>
-</div>
-
-
-
-
-    </div>
 </body>
-
-
-<script>
-var slideIndex = 1;
-showSlides(slideIndex);
-
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
-  var captionText = document.getElementById("caption");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-  captionText.innerHTML = dots[slideIndex-1].alt;
-}
-</script>
 </html>
-
-
-
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
