--- a/custom.html
+++ b/custom.html
@@ -36,6 +36,53 @@
         <h1>Get <span>Storage</span> for any <span>space</span></h1>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <img src="./picture/custom/drawings.png" alt="">
+            </div>
+            <div class="col-4">
+                <img src="./picture/custom/arrow.png" alt="">
+            </div>
+            <div class="col-4">
+                <img src="./picture/custom/worker.png" alt="">
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h1>Wine Cellars</h1>
+                <img src="./picture/custom/1.png" alt="">
+            </div>
+            <div class="col-6">
+                <h1>Butler's Pantries</h1>
+                <img src="./picture/custom/2.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h1>Laundry Room Storage</h1>
+                <img src="./picture/custom/3.png" alt="">
+            </div>
+            <div class="col-6">
+                <h1>Mudroom Units</h1>
+                <img src="./picture/custom/4.png" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h1>Craft Room Organization</h1>
+                <img src="./picture/custom/5.png" alt="">
+            </div>
+            <div class="col-6">
+                <h1>and Much More</h1>
+                <img src="./picture/custom/6.png" alt="">
+            </div>
+        </div>
+    </div>
+
 </body>
 
 
