custom page  done

--- a/custom.html
+++ b/custom.html
@@ -35,53 +35,52 @@
     <div id="kitchen_mdg">
         <h1>Get <span>Storage</span> for any <span>space</span></h1>
     </div>
+    <br>
 
-    <div class="container">
+    <section class="cust_block">
         <div class="row">
-            <div class="col-4">
-                <img src="./picture/custom/drawings.png" alt="">
-            </div>
-            <div class="col-4">
-                <img src="./picture/custom/arrow.png" alt="">
-            </div>
-            <div class="col-4">
-                <img src="./picture/custom/worker.png" alt="">
-            </div>
+            <img class="col-5 dark" src="./picture/custom/drawings.png" alt="">
+            <img class="col-2" src="./picture/custom/arrow.png" alt="">
+            <img class="col-5 dark" src="./picture/custom/worker.png" alt=""> 
         </div>
-    </div>
+    </section>
+    <br>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
+    <section class="custom_bottom">
+
+        <div class="custom_main_block">
+            <div class="info_block">
                 <h1>Wine Cellars</h1>
                 <img src="./picture/custom/1.png" alt="">
             </div>
-            <div class="col-6">
+            <div class="info_block"> 
                 <h1>Butler's Pantries</h1>
                 <img src="./picture/custom/2.png" alt="">
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
+
+        <div class="custom_main_block">
+            <div class="info_block">
                 <h1>Laundry Room Storage</h1>
                 <img src="./picture/custom/3.png" alt="">
             </div>
-            <div class="col-6">
+            <div class="info_block"> 
                 <h1>Mudroom Units</h1>
                 <img src="./picture/custom/4.png" alt="">
             </div>
         </div>
-        <div class="row">
-            <div class="col-6">
+
+        <div class="custom_main_block">
+            <div class="info_block">
                 <h1>Craft Room Organization</h1>
                 <img src="./picture/custom/5.png" alt="">
             </div>
-            <div class="col-6">
+            <div class="info_block"> 
                 <h1>and Much More</h1>
                 <img src="./picture/custom/6.png" alt="">
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 
