--- a/kitchen.html
+++ b/kitchen.html
@@ -26,7 +26,7 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/">Home</a>
-                    <a class="dropdown-item" href="#">About Us</a>
+                    <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
                     <a class="dropdown-item" href="./gallery.html">Gallery</a>
                 </div>
         </div>
@@ -133,7 +133,30 @@
         <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
         <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
     </footer>
+
+    <!-- Modal -->
+    <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="aboutUsTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="aboutUsTitle">About Us</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <span>
+                        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.
+                        The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's 
+                        De Finibus Bonorum et Malorum for use in a type specimen book.
+                  </span>
+                </div>
+              </div>
+            </div>
+        </div>
+
 </body>
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
