--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
           </footer>
     </div>
-    <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#exampleModalCenter">
+    <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
 
     <!-- Modal -->
     <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="aboutUsTitle" aria-hidden="true">
@@ -61,6 +61,26 @@
                     The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's 
                     De Finibus Bonorum et Malorum for use in a type specimen book.
               </span>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <!-- call/msg -->
+
+    <div class="modal fade" id="callMsgModal" tabindex="-1" role="dialog" aria-labelledby="callMsgModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              
+            <div class="modal-header">
+              <h5 class="modal-title" id="aboutUsTitle">About Us</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div class="modal-body">
+              ...
             </div>
           </div>
         </div>
