gallery custom in progress

--- a/custom.html
+++ b/custom.html
@@ -51,36 +51,44 @@
         <div class="custom_main_block">
             <div class="info_block">
                 <h1>Wine Cellars</h1>
-                <img src="./picture/custom/1.png" alt="">
+                <img src="./picture/custom/1.png" alt="" onclick="location.href='gallery1.html'">
             </div>
             <div class="info_block"> 
                 <h1>Butler's Pantries</h1>
-                <img src="./picture/custom/2.png" alt="">
+                <img src="./picture/custom/2.png" alt="" onclick="location.href='gallery2.html'">
             </div>
         </div>
 
         <div class="custom_main_block">
             <div class="info_block">
                 <h1>Laundry Room Storage</h1>
-                <img src="./picture/custom/3.png" alt="">
+                <img src="./picture/custom/3.png" alt="" onclick="location.href='gallery3.html'">
             </div>
             <div class="info_block"> 
                 <h1>Mudroom Units</h1>
-                <img src="./picture/custom/4.png" alt="">
+                <img src="./picture/custom/4.png" alt="" onclick="location.href='gallery4.html'">
             </div>
         </div>
 
         <div class="custom_main_block">
             <div class="info_block">
                 <h1>Craft Room Organization</h1>
-                <img src="./picture/custom/5.png" alt="">
+                <img src="./picture/custom/5.png" alt="" onclick="location.href='gallery5.html'">
             </div>
             <div class="info_block"> 
                 <h1>and Much More</h1>
-                <img src="./picture/custom/6.png" alt="">
+                <img src="./picture/custom/6.png" alt="" onclick="location.href='gallery6.html'">
             </div>
         </div>
     </section>
+    <br>
+    <footer class="d-flex justify-content-center">
+        <p>@Kitchen Update 2019</p>
+        <i class="fab fa-facebook-square" onclick="location.href='https://www.facebook.com'"></i>
+        <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
+        <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
+        <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
+    </footer>
 
     <!-- Modal -->
     <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="aboutUsTitle" aria-hidden="true">
