--- a/gallery6.html
+++ b/gallery6.html
@@ -19,8 +19,7 @@
       <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
       <div class="r_menu">
         <h2>
-          <i class="fas fa-phone"></i>
-          <b >301-909-3404</b>
+          <b>301-909-3404</b>
         </h2>
         <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle">
           <i class="fas fa-bars"></i>
@@ -78,7 +77,13 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>    
+    </div>
+    <br>
+    <section id="cntl_btns">
+      <button type="button" class="btn btn-outline-warning" onclick="history.back()">
+          <i class="fas fa-arrow-left"></i>
+      </button>
+    </section>      
   </div>
 
     <!-- Modal -->
