--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
             <div class="r_menu">
-                <h2>
-                    <i class="fas fa-phone"></i>
-                    <b >301-909-3404</b>
+                <h2 >
+                    <b>301-909-3404</b>
                 </h2>
-                <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle ">
+                <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle">
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="dropdown-menu">
@@ -30,17 +29,18 @@
                 </div>
             </div>
         </div>
+
+        <div id="kitchen_mdg">
+            <h1>We have a solution to any <span>Kitchen Idea</span></h1>
+        </div>
+        
         <div id="main" class="d-flex justify-content-around align-items-center">
             <img src="picture/main/3.png" alt="Cabinet Painting" onclick="location.href='./cabinet.html'">
             <img src="picture/main/1.png" alt="Kitchen Remodeling" onclick="location.href='./kitchen.html'">
             <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'">
         </div>
         <footer class="d-flex justify-content-center" id="bfooter">
-              <p>@Kitchen Update 2019</p>
-              <i class="fab fa-facebook-square" onclick="location.href='https://www.facebook.com'"></i>
-              <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
-              <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
-              <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
+              <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
           </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
