--- a/custom.html
+++ b/custom.html
@@ -18,8 +18,7 @@
         <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
         <div class="r_menu">
             <h2>
-                <i class="fas fa-phone"></i>
-                <b >301-909-3404</b>
+                <b>301-909-3404</b>
             </h2>
             <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle ">
                 <i class="fas fa-bars"></i>
@@ -83,11 +82,7 @@
     </section>
     <br>
     <footer class="d-flex justify-content-center">
-        <p>@Kitchen Update 2019</p>
-        <i class="fab fa-facebook-square" onclick="location.href='https://www.facebook.com'"></i>
-        <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
-        <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
-        <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
+        <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
     </footer>
 
     <!-- Modal -->
