--- a/gallery5.html
+++ b/gallery5.html
@@ -19,7 +19,6 @@
       <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
       <div class="r_menu">
         <h2>
-          <i class="fas fa-phone"></i>
           <b >301-909-3404</b>
         </h2>
         <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle">
@@ -31,6 +30,12 @@
           <a class="dropdown-item" href="./gallery.html">Gallery</a>
         </div>
       </div>
+      <br>
+      <section id="cntl_btns">
+        <button type="button" class="btn btn-outline-warning" onclick="history.back()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
+      </section>  
     </div>
 
     <div class="conteiner d-flex justify-content-center" >
