--- a/pages/img1.html
+++ b/pages/img1.html
@@ -21,10 +21,9 @@
     <div id="wrapper container">
         <section class="top">
             <div id="menu">
-                <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
+                <img src="/picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
                 <h2>
-                    <i class="fas fa-phone"></i>
-                    <b >301-909-3404</b>
+                    <b>301-909-3404</b>
                 </h2>
             </div>
         </section>
@@ -50,11 +49,7 @@
         </section>
 
         <footer class="d-flex justify-content-center" id="bfooter">
-            <p>@Kitchen Update 2019</p>
-            <i class="fab fa-facebook-square" onclick="location.href='https://www.facebook.com'"></i>
-            <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
-            <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
-            <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
+            <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
 
     </div>
