--- a/pages/img5.html
+++ b/pages/img5.html
@@ -23,7 +23,6 @@
             <div id="menu">
                 <img src="/picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
                 <h2>
-                    <i class="fas fa-phone"></i>
                     <b >301-909-3404</b>
                 </h2>
             </div>
@@ -54,11 +53,7 @@
         </section>
 
         <footer class="d-flex justify-content-center" id="bfooter">
-            <p>@Kitchen Update 2019</p>
-            <i class="fab fa-facebook-square" onclick="location.href='https://www.facebook.com'"></i>
-            <i class="fab fa-instagram" onclick="location.href='https://www.instagram.com/'"></i>
-            <i class="fab fa-twitter" onclick="location.href='https://twitter.com/'"></i>
-            <i class="fab fa-houzz" onclick="location.href='https://www.houzz.com/'"></i>
+            <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
 
     </div>
