--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="/">Home</a>
+                    <a class="dropdown-item" href="./review.html">Reviews</a>
                     <a class="dropdown-item" data-toggle="modal" data-target="#aboutUs">About Us</a>
                     <a class="dropdown-item" href="./gallery.html">Gallery</a>
                 </div>
@@ -57,9 +58,22 @@
             </div>
             <div class="modal-body">
               <span>
-                    Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.
-                    The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's 
-                    De Finibus Bonorum et Malorum for use in a type specimen book.
+                &nbsp; Kitchen Updateis a family owned and operated company. It was born as a collaboration of two existing companies: GoodPainter LLC, 
+                who specializes in cabinet painting and refacing; andGreat Décor LLC, who specializes in kitchen remodeling.KitchenUpdateis a tradename of Great Décor LLC.
+                <br>
+                &nbsp; We created Kitchen Update company to provide ourcustomers with a wide range of servicesto get a new look of theirkitchens. We offer professional cabinet painting. 
+                Our uniqueprocess allows you to get a fresh look withmaximumquality andwithout remodeling process hassle.
+                <br>
+                &nbsp; If you don’t like the look of your existing doors, we can easilyhelp you by replacing them with new solid wood doorsinwiderange of styles.
+                <br>
+                &nbsp; If you feel that you are so tired of your old, useless,unattractive kitchen, that even a fresh coat of paint cannot changeit, then it’s time for new cabinets.
+                At Kitchen Update you can find13 kitchen cabinet brands, over 100 door styles and finishes;standard size, semi-custom and custom cabinetsfor any taste.
+                <br>
+                &nbsp; With our designer’s help and our team craftmanship you willget one of a kind custom built-in. We provide storage designs for:wine cellars,pantries, mudroom units, 
+                laundry room storage, craftroom organization and more.
+                <br>
+                &nbsp; Kitchen Update is licensed andinsured company. Weservice Baltimore County, Baltimore City, Howard County, Frederick County, Montgomery County, Fairfax County, Washington DC, 
+                Alexandria City County, Arlington County.
               </span>
             </div>
           </div>
