before and after photo - higher

--- a/pages/img6.html
+++ b/pages/img6.html
@@ -29,7 +29,7 @@
         </section>
 
         <section>
-            <div class="row" style="margin-top: 2em;">
+            <div class="row">
                 <div class="columns">
                     <div class="twentytwenty-container">
                         <img src="../picture/cabinet/6a.jpg" />
