--- a/review.html
+++ b/review.html
@@ -31,12 +31,157 @@
             </div>
         </div>
 
-        <section>
-            <h1>reviews block</h1>
+        <section class="container">
+            <div class="card bg-secondary">
+                <div class="card-header bg-light">
+                    <i class="fas fa-user-check"></i>&nbsp; 
+                    <b>Daniel S.</b>
+                    &nbsp; 
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                </div>
+                <div class="card-body bg-secondary">
+                    <span style="color: yellow">
+                        We had our kitchen cabinets repainted and couldn't be more satisfied with how everything turned out. Andrey was very professional in communicating with us,
+                         helping us determine exactly what we wanted in a finished product, fitting us into his already busy schedule and even working around some issues we 
+                         had with another project overlapping in his work area that unexpectedly took much longer than anticipated. We especially appreciated his attention to detail,
+                         giving a fifth coat of paint to the lower cabinets to ensure they looked perfect, reinstalling the hardware and putting new
+                         bumpers on the doors.
+                    </span>
+                </div>
+            </div>
+            <br>
+
+            <div class="card bg-secondary">
+                <div class="card-header bg-light">
+                    <i class="fas fa-user-check"></i>&nbsp; 
+                    <b>Lucy Silva</b>
+                    &nbsp; 
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                    <i class="fas fa-star text-danger"></i>
+                </div>
+                <div class="card-body bg-secondary">
+                    <span style="color: yellow">
+                        I decided to completely renovate my kitchen a year ago, and after speaking with several contractors, decided to hire Elena to run the project. 
+                        This was the most important first decision of many, and I really glad I found her for the job. Here are some reasons why. 
+                        <br><br>
+                        <ol>
+                            <li>Her quote was exact. There were no hidden or surprise fees at the end. I made a couple changes along the way, which she gave me the price for, and I added on. She was flexible in working with changes and her estimates were exact. </li>
+                            <li>She has a broad understanding of varying styles. She understood the technical side of the job AND the interior design aspect of the job. Both were important to me, and not all contractors are capable of both (I spoke with several that did not understand the "look" I was going for). </li>
+                            <li>The subcontractors that completed the work day-to-day were excellent, friendly, and respectful. I did not mind having them in my house at all.</li>
+                            <li>Everything from her end was on time. The project was delayed only because I ordered my appliances a little late. She completed her work as promised, and when my appliances were delayed, she adjusted her schedule to work with me.</li>
+                            <li>She worked with my budget. My kitchen looks amazing, is high quality, and was within the reasonable budget I had outlined. Every other contractor I spoke with told me it wouldn't happen. Elena made it happen.</li>
+                            <li>I think I may have asked Elena fifty questions a day. Never once did she act annoyed or inconvenienced by my needing clarification or further explanation of the process. She is extremely patient and customer service oriented. </li>
+                        </ol>
+                        I could really go on and on with examples. Elena was absolutely professional, knowledgeable, and delightful to work with. 
+                        I would hire her again in a heartbeat, and highly recommend her, especially to someone who is renovating for the first time.
+                            
+                    </span>
+                </div>
+            </div>
+            <br>
+
+            <div class="card bg-secondary">
+                    <div class="card-header bg-light ">
+                        <i class="fas fa-user-check"></i>&nbsp; 
+                        <b>Edwin J.</b>
+                        &nbsp; 
+                        <i class="fas fa-star text-danger"></i>
+                        <i class="fas fa-star text-danger"></i>
+                        <i class="fas fa-star text-danger"></i>
+                        <i class="fas fa-star text-danger"></i>
+                        <i class="fas fa-star text-danger"></i>
+                    </div>
+                    <div class="card-body bg-secondary">
+                        <span style="color: yellow">
+                                Andrey provided an outstanding service that I didn't think was possible for this project. He was very direct from the beginning, receptive to my questions and concerns, 
+                                patient with his explanation, and explained the pros and cons to the different alternatives possible to redo kitchen cabinets. Furthermore, he was very flexible with 
+                                scheduling and he went out of his way to accommodate my hectic schedule. Andrey kept my kitchen clean throughout the entire process from start to finish; 
+                                and I love the outcome of his work. I highly recommend Andrey and I know he will do the right thing for his current and future customers.
+                        </span>
+                    </div>
+                </div>
+                <br>
+
+                <div class="card bg-secondary">
+                        <div class="card-header bg-light">
+                            <i class="fas fa-user-check"></i>&nbsp; 
+                            <b>Ron Huda</b>
+                            &nbsp; 
+                            <i class="fas fa-star text-danger"></i>
+                            <i class="fas fa-star text-danger"></i>
+                            <i class="fas fa-star text-danger"></i>
+                            <i class="fas fa-star text-danger"></i>
+                            <i class="fas fa-star text-danger"></i>
+                        </div>
+                        <div class="card-body bg-secondary">
+                            <span style="color: yellow">
+                                    Andrey and his team were phenomenal. Absolutely professional, hardworking, ethical and fair priced. They were honest and provided the type of 
+                                    customer service you RARELY receive. They completed out project while we were still in California and on route to Virginia. Our cabinets look brand 
+                                    new and the wainscoting looks like it belongs in an art gallery. I would recommend hiring these guys without a second thought or blink!
+                            </span>
+                        </div>
+                    </div>
+                    <br>
+
+                    <div class="card bg-secondary">
+                            <div class="card-header bg-light">
+                                <i class="fas fa-user-check"></i>&nbsp; 
+                                <b>Stephanie Mahr</b>
+                                &nbsp; 
+                                <i class="fas fa-star text-danger"></i>
+                                <i class="fas fa-star text-danger"></i>
+                                <i class="fas fa-star text-danger"></i>
+                                <i class="fas fa-star text-danger"></i>
+                                <i class="fas fa-star text-danger"></i>
+                            </div>
+                            <div class="card-body bg-secondary">
+                                <span style="color: yellow">
+                                    Elena and her team did a fantastic job fully renovating our kitchen. From start to finish, she managed the project with expertise, creativity, 
+                                    kindness and professionalism. 
+                                    <br>  
+                                    She stuck to our strict budget and gave us many project options (including detailed specs and photos) within that budget to make decisions that 
+                                    were best for us. The contract included ALL additional work, so we had no surprises during the project. She was incredibly clear in all of her 
+                                    communication and she was easy to trust to get the job done right.
+                                    <br>  
+                                    She communicated with her team (granite, tile, paint, construction) excellently and they were all great at their trades, organized, and courteous.
+                                    <br>    
+                                    We are so pleased with our beautiful, functional, new kitchen!    
+                                </span>
+                            </div>
+                        </div>
+                        <br>
+
+                        <div class="card bg-secondary">
+                                <div class="card-header bg-light">
+                                    <i class="fas fa-user-check"></i>&nbsp; 
+                                    <b>Jimmy R.</b>
+                                    &nbsp; 
+                                    <i class="fas fa-star text-danger"></i>
+                                    <i class="fas fa-star text-danger"></i>
+                                    <i class="fas fa-star text-danger"></i>
+                                    <i class="fas fa-star text-danger"></i>
+                                    <i class="fas fa-star text-danger"></i>
+                                </div>
+                                <div class="card-body bg-secondary">
+                                    <span style="color: yellow">
+                                        Andrey and his crew were absolutely amazing. They took our outdated cabinets and gave them life again! He was extremely responsive and 
+                                        flexible with his scheduling. Within a few days of contacting him, he had his guys out to start working on the cabinets. His price was extremely 
+                                        reasonable considering the amount of doors and drawer faces that needed to be painted.
+                                    </span>
+                                </div>
+                            </div>
+                            <br>
         </section>
 
 
-        <footer class="d-flex justify-content-center" id="bfooter">
+        <footer class="d-flex justify-content-center">
             <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
     </div>
