--- a/kitchen.html
+++ b/kitchen.html
@@ -18,7 +18,7 @@
         <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
         <div class="r_menu">
             <h2>
-                <b >301-909-3404</b>
+                <b onclick="location.href='tel:301-909-3404'">301-909-3404</b>
             </h2>
                 <button type="button" data-toggle="dropdown" class="btn btn-outline-light rounded-circle ">
                     <i class="fas fa-bars"></i>
