--- a/pages/img11.html
+++ b/pages/img11.html
@@ -23,7 +23,7 @@
             <div id="menu">
                 <img src="/picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
                 <h2>
-                    <b>301-909-3404</b>
+                    <b onclick="location.href='tel:301-909-3404'">301-909-3404</b>
                 </h2>
             </div>
         </section>
