--- a/custom.html
+++ b/custom.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/style/style.css">
     <title>Custom Built-Ins</title>
 </head>
-<body>
+<body id="b4">
 
     <div id="menu">
         <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
