--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Kitchen Update</title>
 </head>
-<body>
+<body id="b1">
     <div id="wrapper">
         <div id="menu">
             <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
