--- a/kitchen.html
+++ b/kitchen.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/style/style.css">
     <title>Kitchen Remodeling</title>
 </head>
-<body>
+<body id="b3">
 
     <div id="menu">
         <img src="./picture/logo.png" alt="Kitchen Update" id="logo" onclick="location.href='/'">
@@ -33,7 +33,7 @@
     </div>
 
     <div id="kitchen_mdg">
-        <h1><span>Make</span> your dream <span>Kitchen a Reality</span></h1>
+        <h1>Make your dream <span>Kitchen a Reality</span></h1>
     </div>
 
     <div class="selections">
@@ -57,74 +57,60 @@
         >
     </div>
 
-    <br>
-    <div id="catalog">
-        <img src="./picture/kitchen/catalogs.png" alt="">
-    </div>
+    <section class="bg-white">
+        <br>
+        <div class="container bg-light">
+            <span style="font-size: 21px;">
+                We believe the kitchen is the heart of the home and each one should be as unique as the people who live there.
+                That's why we offer cabinets that fit every style and budget   
+            </span>
+        </div>
+        <div id="catalog" >
+            <img src="./picture/kitchen/catalogs.png" class="dark" alt="">
+        </div>
+        <br>
+        <div class="container bg-light">
+                <h1 class="hbox">STOCK STANDARD SIZE CABINETS</h1>
+                <br>
+                <div class="row">
+                   <img class="col-sm w-50" src="./picture/kitchen/collage1_1.png">
+                    <div class="col-sm">
+                        <span style="font-size: 21px;">
+                            Want to get a beautiful kitchen fast, but don’t want to spend a fortune. Stock standard size cabinets will be the best fit for you. We can offer a huge variety of door styles, colors and finishes. And with our designer’s help you can expect getting the best result for your money. Brands that we carry features wood construction, superior hardware, and durable paints and finishes. EPA TSCA Title VI compliant. Greengard Gold certified. Waterbourne UV finishes. Stock cabinets provide a fast and easy way to give your kitchen a fresh new look. We can make it easier for you to keep your remodeling project on time and bring your vision to life.
+                        </span>
+                    </div> 
+                </div>
+            </div>
+            <br><br>
+            <div class="container bg-light">
+                <h1 class="hbox">SEMI-CUSTOM CABINETS</h1>
+                <div class="row">
+                   <img class="col-sm w-50" src="./picture/kitchen/collage2_2.png">
+                    <div class="col-sm">
+                        <span style="font-size: 21px;">
+                                Want to get a beautiful kitchen fast, but don’t want to spend a fortune. Stock standard size cabinets will be the best fit for you. We can offer a huge variety of door styles, colors and finishes. And with our designer’s help you can expect getting the best result for your money. Brands that we carry features wood construction, superior hardware, and durable paints and finishes. EPA TSCA Title VI compliant. Greengard Gold certified. Waterbourne UV finishes. Stock cabinets provide a fast and easy way to give your kitchen a fresh new look. We can make it easier for you to keep your remodeling project on time and bring your vision to life.
+                        </span>
+                    </div> 
+                </div>
+            </div>
+            <br><br>
+            <div class="container bg-light">
+                <h1 class="hbox">CUSTOM CABINETS</h1>
+                <div class="row">
+                   <img class="col-sm w-50" src="./picture/kitchen/collage3_3.png">
+                    <div class="col-sm">
+                        <span style="font-size: 21px;">
+                                Have an unusual kitchen layout or an unconventional                                                                                 floor plan? Custom cabinet doors and drawers can be built to any size you specify, which makes all of your spaces usable, taking advantage of nearly every inch in your kitchen. Custom cabinets provide you with a quality personal customized selection of wood, style, finish, door styles, and hardware to address your goals and needs. And do not forget about the major benefit - custom cabinets are made by skilled cabinet makers by hand – not on assembly lines. Custom cabinets are quality construction that’s built to last.
+                        </span>
+                    </div> 
+                </div>
+        </div>
+        <br><br>
+
+    </section>
 
     <br><br>
-    <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
-      
-    <section class="container bg-light">
-        <h1 class="hbox">STOCK STANDARD SIZE CABINETS</h1>
-        <br>
-        <div class="row">
-           <img class="col-sm w-50" src="./picture/kitchen/collage1_1.png">
-            <div class="col-sm">
-                <span style="font-size: 21px;">
-                    Getting all but only the standard features is not quite
-                    your way, not a problem. Semi custom kitchen
-                    cabinets will be the great solution for you.
-                    Semi custom cabinets are available in mo re styles, features
-                    and options than stock cabinets, allowing you to
-                    create a personalized look for your kitchen, at less
-                    expense than custom cabinets.
-                    They are also available with features such as roll out shelves, door
-                    racks and organization inserts, and can be
-                    embellished with crown molding, cabinet legs and
-                    feet to create a unique look. What color to choose
-                    from white and black options only ?
-                    It is not the question for you anymore.
-                    We are offering spray paint services to match any color you like
-                </span>
-            </div> 
-        </div>
-    </section>
-    <br><br>
-    <section class="container bg-light">
-        <h1 class="hbox">SEMI-CUSTOM CABINETS</h1>
-        <div class="row">
-           <img class="col-sm w-50" src="./picture/kitchen/collage2_2.png">
-            <div class="col-sm">
-                <span style="font-size: 21px;">
-                    SEMI-CUSTOM CABINETS Getting all but only the standard features is not quite your way, not a problem. 
-                    Semi-custom kitchen cabinets will be the great solution for you. Semi-custom cabinets are available in more
-                    styles, features and options than stock cabinets, allowing you to create a personalized look for your kitchen, 
-                    at less expense than custom cabinets. They are also available with features such as roll out shelves, door 
-                    racks and organization inserts, and can be embellished with crown molding, cabinet legs and feet to create a unique look. 
-                    What color to choose from white and black options only? It is not the question for you anymore. We are offering spray paint
-                    services to match any color you like
-                </span>
-            </div> 
-        </div>
-    </section>
-    <br><br>
-    <section class="container bg-light">
-        <h1 class="hbox">CUSTOM CABINETS</h1>
-        <div class="row">
-           <img class="col-sm w-50" src="./picture/kitchen/collage3_3.png">
-            <div class="col-sm">
-                <span style="font-size: 21px;">
-                    Have an unusual kitchen layout or an unconventional floor plan? Custom cabinet doors and drawers
-                    can be built to any size you specify, which makes all of your spaces usable, taking advantage of
-                    nearly every inch in your kitchen. Custom cabinets provide you with a quality personal customized
-                    selection of wood, style, finish, door styles, and hardware to address your goals and needs. And do
-                    not forget about the major benefit - custom cabinets are made by skilled cabinet makers by hand –
-                    not on assembly lines. Custom cabinets are quality construction that’s built to last.
-                </span>
-            </div> 
-        </div>
-    </section>
+    <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">     
     <br>
     <footer class="d-flex justify-content-center">
         <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
