--- a/custom.html
+++ b/custom.html
@@ -33,17 +33,22 @@
     </div>
 
     <div id="kitchen_mdg">
-        <h1>Get <span>Storage</span> for any <span>space</span></h1>
+        <h1>Get Storage for any <span>Space</span></h1>
     </div>
-    <br>
+    <br><br><br>
 
     <section class="cust_block">
         <div class="row">
-            <img class="col-5 dark" src="./picture/custom/drawings.png" alt="">
+            <img class="col-5 dark ef" src="./picture/custom/drawings.png" alt="">
             <img class="col-2" src="./picture/custom/arrow.png" alt="">
-            <img class="col-5 dark" src="./picture/custom/worker.png" alt=""> 
+            <img class="col-5 dark ef" src="./picture/custom/worker.png" alt=""> 
         </div>
     </section>
+
+    <br>
+    <div id="kitchen_mdg">
+        <h2>CHECK OUT PRACTICAL STORAGE IDEAS </h2>
+    </div>
     <br>
 
     <section class="custom_bottom">
@@ -83,7 +88,7 @@
     </section>
     <br>
     <footer class="d-flex justify-content-center">
-        <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+        <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
     </footer>
 
     <!-- Modal -->
