--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <img src="picture/main/1.png" alt="Kitchen Remodeling" onclick="location.href='./kitchen.html'">
             <img src="picture/main/2.png" alt="Custom Built-ins" onclick="location.href='./custom.html'">
         </div>
-        <footer class="d-flex justify-content-center" id="bfooter">
-              <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+        <footer class="d-flex justify-content-center" id="bfooter" >
+              <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
           </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
