--- a/kitchen.html
+++ b/kitchen.html
@@ -113,7 +113,7 @@
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">     
     <br>
     <footer class="d-flex justify-content-center">
-        <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+        <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
     </footer>
 
     <!-- Modal -->
