--- a/review.html
+++ b/review.html
@@ -182,7 +182,7 @@
 
 
         <footer class="d-flex justify-content-center">
-            <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
+            <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
     </div>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">
