--- a/kitchen.html
+++ b/kitchen.html
@@ -112,7 +112,7 @@
     <br><br>
     <img id="contact_icon" src="/picture/contact.gif" alt="" class="btn" data-toggle="modal" data-target="#callMsgModal">     
     <br>
-    <footer class="d-flex justify-content-center">
+    <footer class="d-flex justify-content-center pointer">
         <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
     </footer>
 
