--- a/policy.html
+++ b/policy.html
@@ -177,7 +177,7 @@
         <br>
 
 
-        <footer class="d-flex justify-content-center">
+        <footer class="d-flex justify-content-center pointer">
             <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
     </div>
