--- a/review.html
+++ b/review.html
@@ -181,7 +181,7 @@
         </section>
 
 
-        <footer class="d-flex justify-content-center">
+        <footer class="d-flex justify-content-center pointer">
             <p onclick="location.href='./policy.html'">@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
     </div>
