--- a/pages/img12.html
+++ b/pages/img12.html
@@ -49,7 +49,7 @@
                 </button>
         </section>
 
-        <footer class="d-flex justify-content-center" id="bfooter">
+        <footer class="d-flex justify-content-center pointer" id="bfooter">
             <p>@2019 Kitchen Update. All rights reserved. Privacy Policy</p>
         </footer>
 
